# gateway/internal/routes/routes.go
@@ -29,6 +29,8 @@ func SetupRoutes(r *gin.Engine) {
 		psychOnly.POST("/slots", proxy.Forward("http://booking-service:8084"))
 		psychOnly.GET("/slots", proxy.Forward("http://booking-service:8084"))
 		psychOnly.DELETE("/slots/:id", proxy.Forward("http://booking-service:8084"))
+		psychOnly.PUT("/slots/:id/notes", proxy.Forward("http://booking-service:8084"))
+		psychOnly.GET("/students/:student_id/history", proxy.Forward("http://booking-service:8084"))
 	}
 
 	// 3. Student Only
